# dnoted

./: Cargo.toml  README.md
src/: main.rs
src/store/: config.rs  mod.rs
