[package]
name = "dnoted-edc"
version = "0.1.0"
edition = "2021"
description = "A simple tool to leave yourself notes in directories"
license = "MIT"
homepage = "https://github.com/edisonwong520/dnoted.git"
repository = "https://github.com/edisonwong520/dnoted.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
